# Projeto-Computacional

./: README.md  fourier.py  teste_fourier.py  teste_wavelet.py  wavelet.py
mamute_denoise/: CHANGELOG.md  CONTRIBUTING.md  How it works?.ipynb  LICENSE  README.md  add_noise.py  audio_treatment.py  fourier.py  mamute_denoise.py  presentation.ipynb  pyproject.toml  wavelet.py
mamute_denoise/docs/: Makefile  conf.py  example.ipynb  make.bat
mamute_denoise/src/mamute_denoise/: __init__.py
mamute_denoise/tests/: test_mamute_denoise.py
