[tool.poetry]
name = "mamute_denoise"
version = "0.1.0"
description = "files or remove it (using FFT or Wavelet transform)"
authors = ["Isadora gomes, Pedro Lopes e Raul Santos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
