[tool.poetry]
name = "mamute_denoise"
version = "0.1.0"
description = "files or remove it (using FFT or Wavelet transform)"
authors = ["Isadora gomes, Pedro Lopes e Raul Santos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
wave = "^0.0.2"
librosa = "^0.10.1"
noisereduce = "^3.0.0"
pandas = "^2.1.4"
plotly = "^5.18.0"
pywavelets = "^1.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
